# splunk-observability-cloud-labs

./: .env.example  .gitignore  README.md
labs/python-fastapi-websocket/: .env.example  README.md  confluence-page.md  docker-compose.yml  requirements.txt  traffic_generator.py
labs/python-fastapi-websocket/app/: main.py  otel_config.py  websocket_manager.py
labs/python-fastapi-websocket/app/templates/: index.html
labs/rust-dice-server/: Cargo.toml  Dockerfile  README.md  confluence-page.md  docker-compose.yml
labs/rust-dice-server/src/: main.rs
