# Based on the OpenTelemetry Rust Getting Started example:
#   https://opentelemetry.io/docs/languages/rust/getting-started/
# Original example code licensed under Apache 2.0 by the OpenTelemetry Authors.
# Modified to export to Splunk Observability Cloud via OTLP/HTTP.

[package]
name = "dice_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

# Random dice
rand = "0.9"

# OpenTelemetry core
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }

# OTLP exporter over HTTP (protobuf) — required for Splunk direct ingest
# Use reqwest-blocking-client (not reqwest-client) because the SDK's background
# export threads don't have a Tokio runtime — async reqwest panics there.
opentelemetry-otlp = { version = "0.28", features = ["http-proto", "reqwest-blocking-client", "trace", "metrics"] }

# Blocking HTTP client (needed explicitly for the OTLP HTTP exporter)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }

# Semantic conventions
opentelemetry-semantic-conventions = "0.28"

# For reading .env file
dotenvy = "0.15"
